<resources>
    <string name="app_name">Sanjay (System Test)</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="user_list">User list</string>
    <string name="no_user_found">There are no users in the system</string>
</resources>
